--- a/app/views/about/about.html.haml
+++ b/app/views/about/about.html.haml
@@ -27,6 +27,8 @@
   %li= link_to 'Git', 'http://git.or.cz'
   %li= link_to 'Thin', 'http://code.macournoyer.com/thin/'
   %li= link_to 'Nginx', 'http://nginx.net'
+  %li= link_to 'Apache', 'http://www.apache.org/'
+  %li= link_to 'Phusion Passenger', 'http://www.modrails.com/'
   %li= link_to 'Firefox', 'http://www.mozilla.com/firefox'
   %li= link_to 'Firefox HTML validator', 'http://users.skynet.be/mgueury/mozilla'
   %li= link_to 'Inkscape', 'http://www.inkscape.org/'
@@ -34,3 +36,4 @@
     = link_to "FAMFAMFAM", 'http://www.famfamfam.com/lab/icons/silk/'
     (Creative Commons icons)
   %li Any other projects I've forgotten, let me know if you want a link
+
