--- a/app/views/about/bankholidays.html.haml
+++ b/app/views/about/bankholidays.html.haml
@@ -11,15 +11,31 @@
   You can find out more information about
   = link_to('Bank holidays and British Summer Time on DirectGov', 'http://www.direct.gov.uk/en/Governmentcitizensandrights/LivingintheUK/DG_073741') + '.'
 
+%ul
+  - @holiday_sets.each do |h_set|
+    %li= anchor_to h(h_set.name)
+
+
 - @holiday_sets.each do |h_set|
-  %h2&= h_set.name
+  %h2= anchor_for h(h_set.name)
+
   - prev_year = ""
-  %ul
-    - h_set.holiday_events.each do |h_event|
-      - if h_event.date.year != prev_year
-        %li
-          %h3= prev_year = h_event.date.year
-      %li{ :class => h_event.date == Date.today ? 'highlight' : nil }
-        = h_event.date.strftime("%a %d %b %Y").sub(/ 0(\d)/,' \1')
-        = h_event.comment
+  %table.reports
+    %tr
+      %th Year
+      %th Month
+      %th Day
+      %th Weekday
+      %th Comment
+    - h_set.holiday_events.future.each do |h_event|
+      %tr{ :class => h_event.date == Date.today ? 'highlight' : nil }
+        %td= h_event.date.year
+        %td= h_event.date.strftime("%B")
+        %td= h_event.date.day
+        %td= h_event.date.strftime("%A")
+        %td
+          = h_event.comment
+          - if h_event.date == Date.today
+            %strong
+              (today)
 
