Specs for StatusManager now correct and passing. Tidied up

--- a/app/views/facilities/index.html.haml
+++ b/app/views/facilities/index.html.haml
@@ -8,3 +8,4 @@
       = link_to h(f.full_name), f
       %small
         = "(#{time_ago_in_words(f.updated_at)} ago)"
+        %span{ :class => @status_manager.status(f).downcase }= @status_manager.status(f)
