Fixed image url

--- a/public/stylesheets/sass/stylesheet.sass
+++ b/public/stylesheets/sass/stylesheet.sass
@@ -148,7 +148,7 @@ address
   :padding 4px
 
 .alert
-  :background #ff6 url(/images/error.png) no-repeat 5px 5px
+  :background #ff6 url(/images/cross.png) no-repeat 5px 5px
   :border 1px solid #999
   :padding 4px 4px 4px 24px
 
