--- a/app/views/facilities/_form.html.haml
+++ b/app/views/facilities/_form.html.haml
@@ -75,14 +75,7 @@
           %label.optional Comment
       - facility_form.fields_for :normal_openings do |opening_form|
         - next if opening_form.object.marked_for_destruction?
-        %tr.normal_opening
-          %td= opening_form.select :week_day, Opening::DAYNAMES
-          %td= opening_form.text_field :opens_at, :size => 5, :maxlength => 7
-          %td= opening_form.text_field :closes_at, :size => 5, :maxlength => 7
-          %td= opening_form.text_field :comment
-          %td.action
-            = remove_link_unless_new_record(opening_form)
-        =# render :partial => 'form_normal_opening', :locals => { :ff => opening_form, :normal_opening => opening_form.object }
+        = render(:partial => 'form_normal_opening', :locals => { :ff => facility_form, :normal_opening => opening_form.object })
 
     %p= add_normal_opening_link("Add normal opening", facility_form)
 
@@ -112,16 +105,7 @@
           %label.optional Comment
       - facility_form.fields_for :holiday_openings do |opening_form|
         - next if opening_form.object.marked_for_destruction?
-        %tr.holiday_opening
-          %td
-            = opening_form.check_box :closed?, :onclick => "this.disable"
-            = opening_form.label :closed?, 'Closed'
-          %td= opening_form.text_field :opens_at, :size => 5, :maxlength => 7
-          %td= opening_form.text_field :closes_at, :size => 5, :maxlength => 7
-          %td= opening_form.text_field :comment
-          %td.action
-            = remove_link_unless_new_record(opening_form)
-        =# render :partial => 'form_holiday_opening', :locals => { :ff => opening_form, :holiday_opening => opening_form.object }
+        = render(:partial => 'form_holiday_opening', :locals => { :ff => facility_form, :holiday_opening => opening_form.object })
 
     %p= add_holiday_opening_link("Add holiday opening", facility_form)
 
