--- a/public/stylesheets/sass/stylesheet.sass
+++ b/public/stylesheets/sass/stylesheet.sass
@@ -157,7 +157,7 @@ address
   :font-family monospace
   :white-space nowrap
 
-#allContent
+#container
   :width= !content_width
   :margin auto
   :margin-top 0
