--- a/app/views/facilities/_form_normal_opening.html.haml
+++ b/app/views/facilities/_form_normal_opening.html.haml
@@ -1,9 +1,8 @@
-- ff.fields_for :normal_openings, normal_opening do |f|
-  %tr.normal_opening
-    %td= f.select :week_day, Opening::DAYNAMES
-    %td= f.text_field :opens_at, :size => 5, :maxlength => 7
-    %td= f.text_field :closes_at, :size => 5, :maxlength => 7
-    %td= f.text_field :comment
-    %td.action
-      = remove_link_unless_new_record(f)
+%tr.normalopening
+  %td= f.select :week_day, Opening::DAYNAMES
+  %td= f.text_field :opens_at, :size => 5, :maxlength => 7
+  %td= f.text_field :closes_at, :size => 5, :maxlength => 7
+  %td= f.text_field :comment
+  %td.action
+    = remove_link_unless_new_record(f)
 
