--- a/app/views/about/feedback.html.haml
+++ b/app/views/about/feedback.html.haml
@@ -7,8 +7,7 @@
     %li
       Incorrect information?
       = link_to 'Please see this help section', help_path, :anchor => 'the-information-is-wrong'
-    %li
-      See also
+      also the 
       = link_to 'community guidelines', guidelines_path
     %li Found a bug? Please add it to the <a href="http://github.com/aubergene/Opening-Times/issues">Opening Times project on GitHub</a>.
 
