--- a/app/views/partials/_banner.html.haml
+++ b/app/views/partials/_banner.html.haml
@@ -1,6 +1,8 @@
-#banner
-  %h2#siteTitle
-    %a{ :href=>"/", :accesskey => '1' }
-      %span{ :style => "margin: 1px"}= render :partial => 'partials/logo'
-      Opening-Times.co.uk
+#banner.container_16
+  .grid_16
+    %h2#siteTitle
+      %a{ :href=>"/", :accesskey => '1' }
+        %span{ :style => "margin: 1px"}= render :partial => 'partials/logo'
+        Opening-Times.co.uk
+  .clearfix
 
