--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -1,37 +1,39 @@
 - content_for :head do
   = auto_discovery_link_tag(:atom, { :overwrite_params => { :format => :xml  } }, { :title => "ATOM feed" } )
 
-%h1= @page_title = "Facilities near \"#{h(params[:location])}\""
+- content_for :top_content do
+  .grid_16
+    %h1= @page_title = "Facilities near \"#{h(params[:location])}\""
 
-%div{:style=>"width:50%; float:left"}
-  - if @time
-    %p
-      Showing facilitys open on
-      %br
-      %strong= @time.strftime("%a %d %b %Y - %I:%M%p")
+  .grid_8
+    - if @time
+      %p
+        Showing facilitys open on
+        %br
+        %strong= @time.strftime("%a %d %b %Y - %I:%M%p")
 
-  %table.resultsList
-    - counter = 0
-    - @facilities.each do |facility|
-      - status = @status_manager.status(facility.id)
-      - counter += 1
-      %tr
-        %td.oc
-          = image_tag("markers/#{status.downcase}/marker#{counter}.png", :alt => status)
-          %br
-          %span{:class=>status.downcase}
-            = status
-        %td
-          = link_to h(facility.full_name), facility
-          .info
-            - if @status_manager.on_holiday?(facility.id)
-              %strong
-                Bank holiday opening times, please check details
-                %br
-            = number_with_precision(facility.distance,:precision=>1) + '&nbsp;miles&nbsp;' + compass(@location.heading_to(facility))
+    %table.resultsList
+      - counter = 0
+      - @facilities.each do |facility|
+        - status = @status_manager.status(facility.id)
+        - counter += 1
+        %tr
+          %td.oc
+            = image_tag("markers/#{status.downcase}/marker#{counter}.png", :alt => status)
+            %br
+            %span{:class=>status.downcase}
+              = status
+          %td
+            = link_to h(facility.full_name), facility
+            .info
+              - if @status_manager.on_holiday?(facility.id)
+                %strong
+                  Bank holiday opening times, please check details
+                  %br
+              = number_with_precision(facility.distance,:precision=>1) + '&nbsp;miles&nbsp;' + compass(@location.heading_to(facility))
 
-  = # render :partial=>'increase_distance' if @facilities.size < 10 and @distance != SearchController::DISTANCES.last
+    = # render :partial=>'increase_distance' if @facilities.size < 10 and @distance != SearchController::DISTANCES.last
 
-%div{:style=>"width:50%; float:left"}
-  = render :partial => "map_search"
+  .grid_8
+    = render :partial => "map_search"
 
