Fixed anchor and img border

--- a/app/views/about/feedback.html.haml
+++ b/app/views/about/feedback.html.haml
@@ -6,7 +6,7 @@
     %li Opening Times is <b>not</b> associated with any of the businesses listed on this site. If you have feedback relating to their service, please contact them directly
     %li
       Incorrect information?
-      = link_to 'Please see this help section', help_path, :anchor => 'the-information-is-wrong'
+      = link_to 'Please see this help section', help_path(:anchor => 'the-information-is-wrong')
       also the 
       = link_to 'community guidelines', guidelines_path
     %li Found a bug? Please add it to the <a href="http://github.com/aubergene/Opening-Times/issues">Opening Times project on GitHub</a>.
