--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -28,6 +28,9 @@ a
     padding: 2px 0
     color: #fff
 
+img 
+  border: none
+
 input, textarea, select
   :font-size large
   :font-family= !font_list
