Meddled with partials. Improved flash messages

--- a/app/views/about/harness.html.haml
+++ b/app/views/about/harness.html.haml
@@ -1,8 +1,13 @@
-#flash-info.flash Test info message
+- content_for :top_content do
+  .grid_16
+    .flash
+      .flash-info Test info message
 
-#flash-success.flash Test success message
+    .flash
+      .flash-success Test success message
 
-#flash-error.flash Test error message
+    .flash
+      .flash-error Test error message
 
 %h1= @page_title = "Test harness"
 
