--- a/app/views/facilities/show.html.haml
+++ b/app/views/facilities/show.html.haml
@@ -54,15 +54,28 @@
         - unless @facility.phone.blank?
           %li= 'Tel:&nbsp;' + @facility.phone
         - unless @facility.url.blank?
-          %li= link_to("More info", @facility.url)
+          %li= link_to("More info", @facility.url, :rel => 'nofollow')
 
     = render 'partials/add_this'
 
     - unless @nearby.empty?
       %h2 Nearby businesses
-      %ol
+      %table.facilityList
         - @nearby[0...5].each_with_index do |nearby,index|
-          %li= link_to h(nearby.full_name), facility_slug_path(nearby.slug)
+          - status = @status_manager.status(nearby)
+          %tr
+            %td.oc
+              = image_tag("markers/#{status.downcase}/marker#{index+1}.png", :alt => status)
+              %br
+              %span{:class=>status.downcase}
+                = status
+            %td
+              = link_to h(nearby.full_name), facility_slug_path(nearby.slug)
+              %br
+              %small
+                = h(nearby.address)
+                %br
+                = number_with_precision(nearby.distance,:precision=>1) + '&nbsp;miles&nbsp;' + compass(@facility.heading_to(nearby))
 
     = render 'facilities/infobox'
     = render 'partials/server_clock'
