--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -181,6 +181,9 @@ a#skipToContent
 .unsure
   :background #666
 
+.geo
+  display: none
+
 .infoBox
   :margin-top 1em
   :border 1px solid #ccc
@@ -251,6 +254,7 @@ table.openingTimes
     :font-weight normal
     :font-size 1.3em
   td
+    :vertical-align middle
     :font-size 2em
     :padding 0 8px 0 8px
     :border-top 1px solid #ccc
@@ -273,6 +277,10 @@ table.openingTimes
       :color #333
       :font-weight normal
       :font-size .7em
+    .timeword
+      :color #000
+      :font-weight normal
+      :font-size .7em    
 
 .info
   :font-size 12px
