--- a/public/stylesheets/sass/pagination.sass
+++ b/public/stylesheets/sass/pagination.sass
@@ -1,37 +1,30 @@
 .pagination
-  :text-align left
+  :text-align center
   :padding .3em
-  ul
-    :margin 0
-    :padding 0
-    :text-align left  # Set to "right" to right align pagination interface */
-    li
-      :list-style-type none
-      :display inline
-      :padding-bottom 1px
-      a, span
-        :padding 2px 6px
-      span.current
-        :font-weight bold
-        :color #FF0084
-      a
-        :border 1px solid #036564
-        :color #036564
-        :text-decoration none
-        &:hover, &:focus
-          :border-color #036564
-          :background #036564
-          :color white
-      .page_info
-        :color #aaa
-        :padding-top .8em
-      .prev_page, .next_page
-        :border-width 2px
-      .prev_page
-        :margin-right 1em
-      .next_page
-        :margin-left 1em
-    li.disablepage
-      :color #999
-      :border 1px solid #999
-      :padding 2px 6px
+  a, span
+    :padding .2em .5em
+  span.disabled
+    :color #AAA
+  span.current
+    :font-weight bold
+    :color #fff
+    :background #036564
+    :border 1px solid #036564
+  a
+    :border 1px solid #036564
+    :color #033649
+    :text-decoration none
+    &:hover, &:focus
+      :border-color #033649
+      :background #ccc
+      :color #033649
+  .page_info
+    :color #aaa
+    :padding-top .8em
+  .prev_page, .next_page
+    :border-width 1px
+  .prev_page
+    :margin-right 1em
+  .next_page
+    :margin-left 1em
+
