--- a/app/views/partials/_user_bar.html.haml
+++ b/app/views/partials/_user_bar.html.haml
@@ -1,19 +1,13 @@
-#userBar.container_16
-  .grid_16
-    - if current_user
-      Logged in as
-      =h current_user.email
-      \|
-      /
-        Actions today
-        = current_user.action_count
-        \|
-      = link_to 'Edit profile', edit_user_path(:current)
-      \|
-      = link_to 'Logout', logout_path
-    - else
-      = link_to 'Login', login_path
-      \|
-      = link_to 'Sign up', signup_path
-  .clearfix
+#userBar
+  - if current_user
+    = link_to 'Edit profile', edit_user_path(:current)
+    \|
+    = link_to 'Logout', logout_path
+    %br
+    Logged in as
+    =h current_user.email
+  - else
+    = link_to 'Login', login_path
+    \|
+    = link_to 'Sign up', signup_path
 
